deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ue-dev
  name: admin-dev-deploy
spec:
  selector:
    matchLabels:
      app: admin-dev-deploy
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      annotations:
        rollingStartDate: "Tue Aug 26 09:06:38 UTC 2021"
      labels:
        app: admin-dev-deploy
    spec:
      containers:
      - name: admin-dev-deploy
        image: 868122429077.dkr.ecr.us-east-2.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 9006
        readinessProbe:
          httpGet:
            path: /api/v1/health-check
            port: 9006

---

kind: Service
apiVersion: v1
metadata:
  name: admin-dev-svc
  namespace: ue-dev

spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster
  #type: NodePort

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: admin-dev-deploy

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - port: 80
      targetPort: 9006
