savvedashboard-prod-svc.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: savvedashboard-prod-svc
  namespace: savve-prod

spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: NodePort

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: savvedashboard-prod-deploy

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - nodePort: 30005
      port: 80
      targetPort: 4400
