savve-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "savve-prod-ingress"
  namespace: "savve-prod"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:050555314504:certificate/5d8e6d88-85bc-4c18-a084-4d3581b8f066
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: savve-ingless-alb

spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
  - host: strategy.savve.io
    http:
      paths:
      - backend:
          serviceName: "savvedashboard-prod-svc"
          servicePort: 80
        path: /*

  - host: api.savve.io
    http:
      paths:
      - backend:
          serviceName: savveuserapi-prod-svc
          servicePort: 80
        path: /api/v1/*
      - backend:
          serviceName: savveapi-prod-svc
          servicePort: 80
        path: /api/*
